@@ -1,3 +1,8 @@
+2014-11-16         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* interpret.h: Revert change of 2014-11-11 since it breaks
+	certain uses.
+
 2014-11-15         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* array.c, awk.h, awkgram.y, builtin.c, dfa.c, eval.c, field.c,
